fix z-index issue

--- a/sass/_generic.scss
+++ b/sass/_generic.scss
@@ -54,6 +54,11 @@
 			bottom: -8px;
 			left: -8px;
 			right: -8px;
+			z-index: 1;
+		}
+		.textwidget, ul, form{
+			position: relative;
+			z-index: 5;
 		}
 		&:nth-child(2n){
 			border-color: $dark-blue;
